# aideneme

./: .gitignore  CMakeLists.txt  README.md  cloudflare-worker.js  index.html  package-lock.json  package.json  probe_out.txt  vite.config.ts
.github/workflows/: build.yml  deploy.yml  funds-probe.yml
assets/: Backtest-BZjdL1wr.js  HeatMap-BPzurbSj.js  PortfolioAnalysis-knNs41oK.js  Screener-UrFrE5L1.js  index-CczL7FbM.js  index-DyPxBJxZ.css  useEscClose-BQPnhhKC.js
cmake/: mingw-w64-x86_64.cmake
data/bist/: A1CAP.json  A1YEN.json  ACSEL.json  ADEL.json  ADESE.json  AEFES.json  AGESA.json  AGHOL.json  AGROT.json  AHGAZ.json  AKBNK.json  AKCNS.json  AKENR.json  AKFYE.json  AKGRT.json  AKHAN.json  AKSA.json  AKSEN.json  ALARK.json  ALBRK.json  ALCAR.json  ALFAS.json  ALGYO.json  ALKA.json  ALKIM.json  ALTIN.json  ALTNY.json  ALVES.json  ANHYT.json  ANSGR.json  ARCLK.json  ARDYZ.json  ARENA.json  ARFYE.json  ARSAN.json  ARTMS.json  ARZUM.json  ASELS.json  ASTOR.json  ASUZU.json  (+620 more)
data/crypto/: A7A5.json  AAVE.json  ADA.json  ADI.json  AERO.json  ALGO.json  APT.json  ARB.json  ASTER.json  ATOM.json  AVAX.json  BCH.json  BDX.json  BEAT.json  BFUSD.json  BGB.json  BNB.json  BTC.json  BUIDL.json  CAKE.json  CC.json  CRO.json  DASH.json  DEXE.json  DOGE.json  DOT.json  ENA.json  ETC.json  ETH.json  EURC.json  FIL.json  FLR.json  GHO.json  GRAM.json  GT.json  HASH.json  HBAR.json  HTX.json  HYPE.json  ICP.json  (+61 more)
data/us/: A.json  AAPL.json  ABBV.json  ABNB.json  ABT.json  ACGL.json  ACN.json  ADBE.json  ADI.json  ADM.json  ADP.json  ADSK.json  AEE.json  AEP.json  AES.json  AFL.json  AIG.json  AIZ.json  AJG.json  AKAM.json  ALB.json  ALGN.json  ALL.json  ALLE.json  AMAT.json  AMCR.json  AMD.json  AME.json  AMGN.json  AMP.json  AMT.json  AMZN.json  ANET.json  AON.json  AOS.json  APA.json  APD.json  APH.json  APO.json  APP.json  (+470 more)
scripts/: bist_symbols.json  build_bist.py  build_crypto.py  build_us.py  funds_probe.py  screener.py  strategies.py
src/: App.cpp  App.hpp  App.tsx  index.css  main.cpp  useEscClose.ts
src/chart/: ChartView.cpp  ChartView.hpp  Decimate.hpp  lod.ts
src/components/: Backtest.tsx  Chart.tsx  HeatMap.tsx  IndicatorMenu.tsx  Portfolio.tsx  PortfolioAnalysis.tsx  Screener.tsx  SymbolSearch.tsx  Trades.tsx  Watchlist.tsx  usePanelCollapse.ts
src/data/: BinanceProvider.cpp  BinanceProvider.hpp  DataProvider.hpp  SyntheticProvider.cpp  SyntheticProvider.hpp  Types.hpp  binance.ts  bistStatic.ts  inflation.ts  resample.ts  synthetic.ts  types.ts  yahoo.ts
src/indicators/: analysis.ts  backtest.ts  calc.ts  customStrategy.ts  patterns.ts  stats.ts
src/net/: Http.cpp  Http.hpp
